--- a/mylibrary/index.html
+++ b/mylibrary/index.html
@@ -79,19 +79,19 @@
             <div class="cards">
             <div class="card">
               <div>
-                  <img src="img/fhater and boy.jpg" alt="">
+                  <img src="img/book4.jpg" alt="">
               </div>  
                 <div class="text">
-                    <h3>كتاب الاب الفقير والاب الغني</h3>
+                    <h3>كتاب من الذي حرك قطعة الجبن الخاصة بي؟</h3>
                     <p>lerfkrf</p>
                 </div>
             </div>
             <div class="card">
                 <div>
-                    <img src="img/asrar.jpg" alt="">
+                    <img src="img/book5.jpg" alt="">
                 </div>  
                   <div class="text">
-                      <h3>كتاب اسرار عقل المليونير</h3>
+                      <h3>كتاب قوة الفشل</h3>
                       <p>lerfkrf</p>
                   </div>
               </div>
@@ -116,10 +116,10 @@
             <div class="cards">
             <div class="card">
               <div>
-                  <img src="img/fhater and boy.jpg" alt="">
+                  <img src="img/book7.jpg" alt="">
               </div>  
                 <div class="text">
-                    <h3>كتاب الاب الفقير والاب الغني</h3>
+                    <h3>كتاب فن اللامبالاة</h3>
                     <p>lerfkrf</p>
                 </div>
             </div>
