--- a/mylibrary/index.html
+++ b/mylibrary/index.html
@@ -9,9 +9,9 @@
     <title>Kilsa</title>
 </head>
 <body>
-    <header>  
+    <header class = "header">  
         <a href="head" class='logoHeader'>KILSA | خِلسة </a>
- <nav class = 'navs'>
+ <nav id="navs" class = "navs">
 <a href="monay-book">كُتُب عن المال</a>
 <a href="book2">كُتُب تحفيز </a>
 <a href="book3">كُتُب تنمية</a>
@@ -20,7 +20,7 @@
     <!-- <br><br><br> -->
     <section class = "main">
         <div dir = "ltr" class= "main-dev">
-        <h2 class = "Welcome"> ..ياأهلا وسهلا بك </br><span class="span-main"><b>في مكتبتي المتواضعة</b></span></h2>
+        <h2 id = "Welcome" class = "Welcome">رائحةالكُتُب هُنا فأهلا بِك</h2>
         <hr class = "hr">
         <p class = "Par-welcome"><b>..ستُشرفني هُناك</b> </p>
         </div>
@@ -46,7 +46,7 @@
                   <img src="img/fhater and boy.jpg" alt="">
               </div>  
                 <div class="text">
-                    <h3>كتاب الاب الفقير والاب الغني</h3>
+                    <h3>كتاب الاب الغني والاب الفقير</h3>
                     <p>lerfkrf</p>
                 </div>
             </div>
@@ -73,7 +73,7 @@
         </section>
 
 
-        <section class="all-cards2" id = "">
+        <section class="all-cards2" id = "book2">
 
             <h3 class = "title" id = "monay-book">كُتُب تحفيز</h3>
             <div class="cards">
@@ -110,7 +110,7 @@
 
 
 
-        <section class="all-cards2" id = "">
+        <section class="all-cards2" id = "book3">
 
             <h3 class = "title" id = "monay-book"> كُتُب تنمية</h3>
             <div class="cards">
